# for display continuity sake please use 2 spaces instead of tabs

2013-03-30 mmichaud <michael.michaud@free.fr>
  * bug 3607970 : improve robustness of SimplifyPolygonCoveragePlugIn and 
    normalize I18N

2013-03-28 mmichaud <michael.michaud@free.fr>
  * fix Screen Scale and SaveImageAsSVG problem (would need some refactoring 
    after 1.6 release though). Change resolution to 0.001 pixel size for svg 
    drawer
  
2013-03-27 mmichaud <michael.michaud@free.fr>
  * Change output resolution of svg drawer from 0.5 to 0.1 pixel

2013-03-27 mmichaud <michael.michaud@free.fr>
  * Improve how buttons of RunDataStoreQuery works
  
2013-03-24 mmichaud <michael.michaud@free.fr>
  * Postgis Reader/Writer is now SRID aware

2013-03-24 mmichaud <michael.michaud@free.fr>
  * It is now much faster to get the list of available WMS layer from a service
  
2013-03-24 mmichaud <michael.michaud@free.fr>
  * Prepare code to accept csv format persistence in projects

2013-03-21 mmichaud <michael.michaud@free.fr>
  * fix : 3608648 can now open a project including broken db connections.
  * ZoomToScalePlugIn now remembers last scale set bythe user
  * Improve exception handling in DataStoreQueryDataSource
  * In AddDataStoreLayerPanel, the list of available tables is now uptodate

2013-03-21 mmichaud <michael.michaud@free.fr>
  * fix in DbfFile appearing with very long header
  * retrieving geometry columns in postgis is now case sensitive
  
2013-03-18 mmichaud <michael.michaud@free.fr>
  * small fix in Add3DGeometryAttributesPLugIn maxSlope calculation

2013-03-17 Matthias Scholz <ms@jammerhund.de>
  * Fix some german translations
  * Fix AboutDialog.formatDirNameForHtml(), because if a HTML text for a JLabel
    contains a leading "/", their is nothing displayed. This is a well known
    Java Bug (http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6688690).
    This bug occurs only under Linux, because every path starts with 
    a leading "/".
